Bug 283679 - telepathy-kde-auth-handler crashes with seg fault when kwallet is disabled
Summary: telepathy-kde-auth-handler crashes with seg fault when kwallet is disabled
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: auth-handler (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks: 282193
  Show dependency treegraph
 
Reported: 2011-10-10 01:05 UTC by Franz
Modified: 2012-07-06 12:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Franz 2011-10-10 01:05:11 UTC
Version:           git-latest (using KDE 4.7.1) 
OS:                Linux

I had kwalled disabled. Everytime I tried to connect to an account I got the crash: A seg fault on auth-handler that is interpreted as authentication fail.

After enabling kwallet, it worked.

Reproducible: Always

Steps to Reproduce:
1. Disable kwallet on kwallet settings
2. Try to connect to any account.

Actual Results:  
Crash with segfault

Expected Results:  
Should ask for the password at least and then authenticate.

OS: Linux (x86_64) release 3.0.4-gentoo
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Daniele E. Domenichelli 2011-10-26 21:41:31 UTC
Git commit fb3a83e5d45f2bf2629866fe69f3cb094fd3906a by Daniele E. Domenichelli.
Committed on 26/10/2011 at 22:34.
Pushed by ddomenichelli into branch 'master'.

Update common repository and use WalletInterface instead of KWallet directly

Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>
BUG: 283679

M  +1    -0    CMakeLists.txt
M  +1    -1    common
M  +22   -43   sasl-auth-op.cpp
M  +1    -5    sasl-auth-op.h
M  +1    -3    sasl-handler.cpp
M  +0    -3    sasl-handler.h

http://commits.kde.org/telepathy-auth-handler/fb3a83e5d45f2bf2629866fe69f3cb094fd3906a