Update common repository and use WalletInterface instead of KWallet directly

Reviewed-by: David Edmundson <kde@davidedmundson.co.uk>
BUG: 283679